feature: add clerk authentication, connect to mongodb and configure structure source code

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+/* @layer utilities {
+    body {
+        font-family: var(--font-manrope);
+    }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-family: var(--font-roboto);
+    }
+} */
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer components {
+    .icon-animated {
+        stroke-dashoffset: 100;
+        stroke-dasharray: 100;
+        animation: dash 2s linear forwards;
+    }
+    @keyframes dash {
+        to {
+            stroke-dashoffset: 0;
+        }
+    }
 }
